style(Contacts-1024): correct top positioning and height of the bottom divider. Increased max-w for the socialLinks container. Decreased gap-x between SocialLinks and form

--- a/src/index.css
+++ b/src/index.css
@@ -254,8 +254,8 @@
   :root {
     --hero-mt: 0px;
 
-    --contacts-div-bot-top: 80px;
-    --contacts-div-bot-height: 340px;
+    --contacts-div-bot-top: 100px;
+    --contacts-div-bot-height: 380px;
 
     --name-year-size: 3rem;
 
